# file_metric_server

./: .gitmodules  CMakeLists.txt
asset/: config.json
src/: main.c
